--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <link rel="stylesheet" href="./resources/css/index.css" />
 </head>
 <body>
+    <img src="./resources/images/zaidi.jpg" id="phone" alt="nepravil'no"/>
     <script src="./script.js" defer></script>
     <nav>
         <h2 id="logo">Mishocky's</h2>
+        <button id="dido">DIDO</button>
         <ul class="navigation-items">
             <li class="navigation-item"><a href="#about-me">My story</a></li>
             <li class="navigation-item"><a href="#projects">Not my projects</a></li>
             <li class="navigation-item"><a href="#memmories">Memmories</a></li>
             <li class="navigation-item"><a href="/footer.html">Contacties</a></li>
-            <li id="dido" class="navigation-item"><button>dido</button></li>
         </ul>
     </nav>
     <main>
