--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./resources/css/index.css" />
 </head>
 <body>
-    <img src="./resources/images/zaidi.jpg" id="phone" alt="nepravil'no"/>
+    <img src="./resources/images/zaidi.png" id="phone" alt="nepravil'no"/>
     <script src="./script.js" defer></script>
     <nav>
         <h2 id="logo">Mishocky's</h2>
