--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             </div>
         </section>
         <section id="projects">
-            <h2>Okay/Alright, I have one</h2>
+            <h2>Okay/Alright, I have Projects</h2>
             <details class="project">
                 <summary class="project-title">
-                    <h3></h3>
+                    <h3>Converter</h3>
                 </summary>
                 <img src="./resources/images/project).png" alt="me as a project" class="project-image"/>
-                <p class="project-description">Actually/ you are right now on my most elaborate project</p>
+                <p class="project-description"><a href="https://mishochek.github.io/converter/" target="_blank">(it's a link!)</a></p>
             </details>
         </section>
         <section id="memmories">
