--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         <button id="dido">DIDO</button>
         <ul class="navigation-items">
             <li class="navigation-item"><a href="#about-me">My story</a></li>
-            <li class="navigation-item"><a href="#projects">Not my projects</a></li>
-            <li class="navigation-item"><a href="#memmories">Memmories</a></li>
-            <li class="navigation-item"><a href="/footer.html">Contacties</a></li>
+            <li class="navigation-item"><a href="#projects">my projects</a></li>
+            <li class="navigation-item"><a href="#memmories">memmories</a></li>
         </ul>
     </nav>
     <main>
@@ -44,7 +43,7 @@
             </details>
         </section>
         <section id="memmories">
-            <h2>Memmorieees</h2>
+            <h2>Memmories</h2>
             <details class="gallery">
                 <summary class="gallery-title">
                     <h3></h3>
@@ -60,6 +59,8 @@
             </details>
         </section>
     </main>
-    <footer>my number: +79160177791 /// my <a href="https://www.instagram.com/mishock/">inst</a></footer>
+    <footer>
+        <p>my number: +79160177791 /// my <a href="https://www.instagram.com/mishock/" target="_blank">inst</a> ... my <a href="https://github.com/Mishochek" target="_blank">github</a></p>
+    </footer>
 </body>
 </html>
